# rocq-lsp-dune

./: .gitignore  _CoqProject.workaround  dune  dune-workspace  test.py
token_logrel/: dune  temp.v  temp2.v
token_logrel2/: dune  temp.v  temp2.v
